PeerReview Feedback Work Items: - Updated the logic to the ArtistsAdapter, TracksAdapter, ArtistSearchFragment, and the TopTenTracksFragment to utilize ButterKnife. - Updated ArtistSearchFragment and TopTenTracksFragment to use the callback feature to handle the Network errors.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'  // Uses this to create RESTful Requests
     compile 'com.squareup.okhttp:okhttp:2.2.0'  // Uses this to create HTTP connections
